# taxlien-gateway

./: .env.example  .gitignore  Dockerfile  Dockerfile.gateway  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  start.sh
.github/workflows/: deploy.yml  gateway-ci.yml
cmd/gateway/: main.go
flows/sdd-miw-gift/: 04-integration-with-system.md  _status.md
flows/sdd-taxlien-gateway/: 01-requirements.md  02-specifications.md  03-plan.md  04-implementation-log.md  EXISTING_CODE_AUDIT.md  _status.md
flows/sdd-taxlien-gateway-cicd/: 01-requirements.md  02-specifications.md  03-plan.md  04-implementation-log.md  _status.md
flows/sdd-taxlien-gateway-legacy-python/: 01-requirements.md  02-specifications.md  03-plan.md  04-implementation-log.md  _status.md
flows/sdd-taxlien-gateway-supabase/: 01-requirements.md  02-specifications.md  03-plan.md  04-implementation-log.md  _status.md
internal/config/: config.go  env.go
internal/handler/: health.go  health_test.go  heartbeat.go  internal.go  raw_files.go  results.go  tasks.go  work.go
internal/metrics/: metrics.go
internal/middleware/: logging.go  metrics.go  request_id.go  worker_auth.go
internal/model/: task.go
internal/server/: deps.go  server.go
internal/service/: properties.go  queue.go  worker_registry.go
legacy/app/: main.py
legacy/tests/: test_auth.py  test_external_api.py  test_gateway.py  test_internal_api.py  test_metrics.py  test_monitoring.py  test_ratelimit.py  test_worker_queue.py
migrations/: 001_parcels.sql
monitoring/prometheus/: prometheus.yml
pkg/db/: postgres.go
(+40 files in other folders)
