[tool.poetry]
name = "taxlien-gateway"
version = "0.1.0"
description = "API Gateway for TAXLIEN.online"
authors = ["Claude <claude@anthropic.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
redis = "^5.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
firebase-admin = "^6.4.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.6"
msgpack = "^1.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
